axum-macros/tests/from_request/fail/unknown_attr_container.rs
use axum_macros::FromRequest;

#[derive(FromRequest)]
#[from_request(foo)]
struct Extractor;

fn main() {}
